[refactor]: springboot4.0.0 (#3872)